# context-span

./: .gitignore  README.md  agent.py  database.db  main.py  memory_model.py  models.py  pyproject.toml
.gemini/: settings.json
core/: context.py  helper.py  memory.py
