[project]
name = "context-span"
version = "0.1.0"
description = "Infrastructure layer that enables AI agents to share reasoning, decisions, and context across workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.27.0",
    "pydantic>=2.13.3",
    "sqlmodel>=0.0.38",
]
