[project]
name = "context-span"
version = "0.1.0"
description = "Infrastructure layer that enables AI agents to share reasoning, decisions, and context across workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "groq>=1.2.0",
    "mcp[cli]>=1.27.0",
    "ollama>=0.6.2",
    "pydantic>=2.13.3",
    "sqlmodel>=0.0.38",
]
